Adapted project structure